# 4

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  DESIGN.md  README.md  REUSE.toml  ixsimpl_amalg.c  pyproject.toml  setup.py  whitelizard.txt
.github/workflows/: ci.yml
bench/: bench_corpus.c  bench_sympy.py
bindings/cpp/: ixsimpl.hpp
bindings/python/: _ixsimpl.c  ixsimpl.pyi
bindings/python/ixsimpl/: __init__.py  _ixsimpl.pyi  sympy_conv.py
include/: ixsimpl.h
scripts/: amalgamate.py  gen_expected.py
src/: arena.c  arena.h  bounds.c  bounds.h  ctx.c  expand.c  expand.h  import.c  interval.c  interval.h  ixs_limits.h  node.c  node.h  parser.c  parser.h  print.c  print.h  rational.c  rational.h  serialize.c  simplify.c  simplify.h  walk.c
test/: conftest.py  corpus.txt  corpus_assumptions.txt  corpus_expected.txt  corpus_gemm256x192_assumptions.txt  corpus_gemm256x192_expected.txt  test_accessors.py  test_arena.c  test_bounds.c  test_check.h  test_corpus.c  test_edge_cases.c  test_expand.c  test_import.c  test_introspect.c  test_parser.c  test_python.py  test_rational.c  test_serialize.c  test_session_compat.h  test_simplify.c  test_sympy_conv.py
