[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ixsimpl"
version = "0.1.0"
description = "Fast index expression simplifier for integer arithmetic"
requires-python = ">=3.7"
license = "Apache-2.0"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["sympy", "sympy.*", "numpy", "numpy.*", "setuptools", "setuptools.*"]
ignore_missing_imports = true
