[build-system]
requires = ["hatchling>=1.24", "scikit-build-core~=0.12.0"]
build-backend = "hatchling.build"

[project]
name = "ixsimpl"
version = "0.1.0"
description = "Fast index expression simplifier for integer arithmetic"
requires-python = ">=3.9"
license = "Apache-2.0"

[tool.hatch.build.targets.wheel.hooks.scikit-build]
experimental = true

[tool.scikit-build]
cmake.build-type = "Release"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["sympy", "sympy.*", "numpy", "numpy.*", "ixsimpl", "pytest"]
ignore_missing_imports = true
